add listing agents assignment
