# backend-laravel/app/Models/User.php
@@ -10,6 +10,7 @@ use Illuminate\Database\Eloquent\Attributes\Hidden;
 use Illuminate\Database\Eloquent\Concerns\HasUuids;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
@@ -57,6 +58,13 @@ class User extends Authenticatable
     public function pipelineDeals(): HasMany
     {
         return $this->hasMany(PipelineDeal::class);
+    }
+
+    public function listings(): BelongsToMany
+    {
+        return $this->belongsToMany(Listing::class, 'listing_users')
+            ->using(ListingUser::class)
+            ->withPivot('is_primary_owner');
     }
 
     public function activityLogs(): HasMany
